# customGraphics

./: .gitignore  CMakeLists.txt  CustomGraphicsScene.h  CustomGraphicsView.cpp  PanHandler.h  RubberBandHandler.cpp  RubberBandHandler.h  ZoomHandler.cpp  ZoomHandler.h  customgraphicswidget.cpp  customgraphicswidget.h  customgraphicswidget.ui  graphicstestwidget.cpp  graphicstestwidget.h  graphicstestwidget.ui  main.cpp
commands/: ShapeCommands.cpp  ShapeCommands.h
handlers/: BackgroundHandler.cpp  BackgroundHandler.h  BoardLoadHandler.cpp  BoardLoadHandler.h  CollisionHandler.cpp  CollisionHandler.h  DragDropHandler.cpp  DragDropHandler.h  DrawHandler.cpp  DrawHandler.h  GuideLineHandler.cpp  GuideLineHandler.h  IInteractionHandler.h  PanHandler.cpp  RulerHandler.cpp  RulerHandler.h  SceneConfig.cpp  SceneConfig.h  ZoomHandler.cpp
items/: StoneSlabItem.cpp  StoneSlabItem.h
view/: CustomGraphicsScene.cpp  CustomGraphicsScene.h  CustomGraphicsView.cpp  CustomGraphicsView.h  MinimapWidget.cpp  MinimapWidget.h  PropertyPanel.cpp  PropertyPanel.h  ShapeMetadata.h
